Finish new Component/Nodes refactor